us-east-1/networking/elastic-ip.tf
resource "aws_eip" "eip-1a" {}   
resource "aws_eip" "eip-1b" {}   
resource "aws_eip" "eip-1c" {}
